# SemShift

./: .gitignore  README.md  build_comprehensive_kwic_dataset.py  eidf_get_kwics.sh  embed_kwics.py  find_kwics_for_csv.py  main.py  pyproject.toml  stimuli.csv  svm.py  utils.py
data/: concreteness_ratings.csv
